--- a/package.json
+++ b/package.json
@@ -13,23 +13,25 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@heroui/avatar": "2.2.10",
-    "@heroui/button": "2.2.13",
-    "@heroui/checkbox": "2.3.12",
-    "@heroui/dropdown": "2.3.13",
-    "@heroui/modal": "2.2.11",
-    "@heroui/pagination": "2.2.12",
-    "@heroui/select": "2.4.13",
-    "@heroui/system": "2.4.10",
-    "@heroui/theme": "2.4.9",
+    "@heroui/avatar": "2.2.13-beta.1",
+    "@heroui/button": "2.2.17-beta.2",
+    "@heroui/checkbox": "2.3.16-beta.2",
+    "@heroui/dropdown": "2.3.17-beta.2",
+    "@heroui/modal": "2.2.14-beta.2",
+    "@heroui/pagination": "2.2.15-beta.1",
+    "@heroui/react": "2.7.6",
+    "@heroui/select": "2.4.17-beta.2",
+    "@heroui/system": "2.4.13-beta.2",
+    "@heroui/theme": "2.4.13-beta.2",
     "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.72.2",
     "@tanstack/react-query-devtools": "^5.72.2",
     "clsx": "^2.1.1",
+    "framer-motion": "11.5.6",
     "motion": "^11.18.2",
     "nuqs": "^2.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "react-rough-notation": "^1.0.5",
     "react-router": "^7.5.0",
@@ -40,6 +42,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/postcss": "^4.1.3",
+    "@tailwindcss/vite": "^4.1.3",
     "@types/node": "^22.14.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -51,7 +55,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
