--- a/package.json
+++ b/package.json
@@ -24,40 +24,40 @@
     "@heroui/system": "2.4.13-beta.2",
     "@heroui/theme": "2.4.13-beta.2",
     "@hookform/resolvers": "^3.10.0",
-    "@tanstack/react-query": "^5.72.2",
-    "@tanstack/react-query-devtools": "^5.72.2",
+    "@tanstack/react-query": "^5.77.0",
+    "@tanstack/react-query-devtools": "^5.77.0",
     "clsx": "^2.1.1",
-    "framer-motion": "11.5.6",
-    "motion": "^11.18.2",
-    "nuqs": "^2.4.1",
+    "framer-motion": "12.12.2",
+    "lucide-react": "^0.511.0",
+    "nuqs": "^2.4.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.56.4",
     "react-rough-notation": "^1.0.5",
-    "react-router": "^7.5.0",
+    "react-router": "^7.6.0",
     "sonner": "^1.7.4",
-    "swiper": "^11.2.6",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.24.2"
+    "zod": "^3.25.28"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@tailwindcss/postcss": "^4.1.3",
-    "@tailwindcss/vite": "^4.1.3",
-    "@types/node": "^22.14.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react-swc": "^3.8.0",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "@eslint/js": "^9.27.0",
+    "@tailwindcss/postcss": "^4.1.7",
+    "@tailwindcss/vite": "^4.1.7",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
+    "@vitejs/plugin-react-swc": "^3.10.0",
+    "eslint": "^9.27.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "prettier": "^3.5.2",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.1.3",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "tailwindcss": "^4.1.7",
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.32.1",
+    "vite": "^6.3.5"
   }
 }
