--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "sonner": "^1.7.4",
     "swiper": "^11.2.8",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.25.28"
+    "zod": "^3.25.28",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
