--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc --noEmit -p tsconfig.app.json",
     "verify": "pnpm lint && pnpm typecheck",
     "format": "prettier --write \"**/*.{ts,tsx,json,md,css,html}\""
   },
