--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write \"**/*.{ts,tsx,json,md,css,html}\""
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@formkit/auto-animate": "^0.8.2",
     "@heroui/avatar": "2.2.13-beta.1",
     "@heroui/button": "2.2.17-beta.2",
