--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@heroui/select": "2.4.17-beta.2",
     "@heroui/system": "2.4.13-beta.2",
     "@heroui/theme": "2.4.13-beta.2",
+    "@heroui/tooltip": "^2.2.18",
     "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.77.0",
     "@tanstack/react-query-devtools": "^5.77.0",
