--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@heroui/modal": "2.2.14-beta.2",
     "@heroui/pagination": "2.2.15-beta.1",
     "@heroui/select": "2.4.17-beta.2",
+    "@heroui/switch": "^2.2.19",
     "@heroui/system": "2.4.13-beta.2",
     "@heroui/theme": "2.4.13-beta.2",
+    "@heroui/toast": "^2.0.11",
     "@heroui/tooltip": "^2.2.18",
     "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.77.0",
@@ -36,11 +38,11 @@
     "nuqs": "^2.4.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
     "react-hotkeys-hook": "^5.1.0",
     "react-rough-notation": "^1.0.5",
     "react-router": "^7.6.0",
-    "sonner": "^1.7.4",
     "swiper": "^11.2.8",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.25.28",
