--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "simple-zustand-devtools": "^1.1.0",
     "tailwindcss": "^4.1.7",
     "typescript": "~5.7.3",
     "typescript-eslint": "^8.32.1",
