feat(settings): update the confirmation provider to be synced with user's preferences

--- a/appwrite.json
+++ b/appwrite.json
@@ -126,7 +126,16 @@
           "default": "enabled"
         },
         {
-          "key": "removeFromWatchlistConfirmation",
+          "key": "removeFromLibraryConfirmation",
+          "type": "string",
+          "required": false,
+          "array": false,
+          "elements": ["enabled", "disabled"],
+          "format": "enum",
+          "default": "enabled"
+        },
+        {
+          "key": "clearLibraryConfirmation",
           "type": "string",
           "required": false,
           "array": false,
