--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "tailwindcss": "^4.1.7",
     "typescript": "~5.7.3",
     "typescript-eslint": "^8.32.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-terminal": "^1.3.0"
   }
 }
