--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.4",
     "react-hotkeys-hook": "^5.1.0",
     "react-rough-notation": "^1.0.5",
