feat(profile): implement recent activity tracking and UI improvements
- Add recent activity tracking for library actions (add, complete, rate)
- Update profile page to show stats with watch time and reordered tabs
- Improve recent activity UI with timeline view and better action indicators
- Fix navigation and active state in user dropdown
- Enhance time formatting utility for better relative time display

--- a/appwrite.json
+++ b/appwrite.json
@@ -449,6 +449,14 @@
           "elements": ["movies", "series", "both"],
           "format": "enum",
           "default": "both"
+        },
+        {
+          "key": "recentActivity",
+          "type": "string",
+          "required": false,
+          "array": true,
+          "size": 500,
+          "default": null
         }
       ],
       "indexes": [
