feat(settings): add animation preferences and provider
- Introduce AnimationProvider to manage animation preferences globally
- Add enableAnimations toggle in preferences settings
- Update auth store and types to support animation preferences
- Add CSS rules to disable animations when preference is off

--- a/appwrite.json
+++ b/appwrite.json
@@ -78,6 +78,18 @@
                     ],
                     "format": "enum",
                     "default": "enabled"
+                },
+                {
+                    "key": "enableAnimations",
+                    "type": "string",
+                    "required": false,
+                    "array": false,
+                    "elements": [
+                        "enabled",
+                        "disabled"
+                    ],
+                    "format": "enum",
+                    "default": "enabled"
                 }
             ],
             "indexes": []
