feat(profile): add profile visibility controls and privacy settings
- Implement profile visibility toggle (public/private)
- Add granular control for hiding specific profile sections
- Update validation schemas and types for new privacy settings
- Enhance UI with animated transitions for form controls
- Add visibility indicators to avatar components
- Modify profile page to respect visibility settings

refactor: migrate to @heroui/react from individual hero packages

Consolidate all hero UI component imports to use the new @heroui/react package instead of individual hero packages. This simplifies dependency management and reduces bundle size. Also includes cleanup of unused code and minor style adjustments.

- Replace all individual hero package imports with @heroui/react
- Remove unused debounce utility function
- Clean up and standardize component imports

--- a/appwrite.json
+++ b/appwrite.json
@@ -531,6 +531,14 @@
                     "min": 0,
                     "max": 922337203685477600,
                     "default": null
+                },
+                {
+                    "key": "hiddenProfileSections",
+                    "type": "string",
+                    "required": false,
+                    "array": true,
+                    "size": 40,
+                    "default": null
                 }
             ],
             "indexes": [
