--- a/package.json
+++ b/package.json
@@ -17,19 +17,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@formkit/auto-animate": "^0.8.2",
-    "@heroui/avatar": "2.2.13-beta.1",
-    "@heroui/button": "2.2.17-beta.2",
-    "@heroui/checkbox": "2.3.16-beta.2",
-    "@heroui/dropdown": "2.3.17-beta.2",
-    "@heroui/modal": "2.2.14-beta.2",
-    "@heroui/pagination": "2.2.15-beta.1",
-    "@heroui/select": "2.4.17-beta.2",
-    "@heroui/switch": "^2.2.19",
-    "@heroui/system": "2.4.13-beta.2",
-    "@heroui/tabs": "^2.2.19",
-    "@heroui/theme": "2.4.13-beta.2",
-    "@heroui/toast": "^2.0.11",
-    "@heroui/tooltip": "^2.2.18",
+    "@heroui/react": "^2.8.1",
     "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.77.0",
     "@tanstack/react-query-devtools": "^5.77.0",
