feat(library): add pagination and improve list navigation
refactor: simplify list navigation hook usage across components
fix(search): properly handle suggestion navigation registration
style: adjust layout spacing and pagination styling

--- a/appwrite.json
+++ b/appwrite.json
@@ -345,8 +345,8 @@
                     "required": false,
                     "array": false,
                     "min": 0,
-                    "max": 10000,
-                    "default": 0
+                    "max": 922337203685477600,
+                    "default": null
                 }
             ],
             "indexes": [
