--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.77.0",
     "@tanstack/react-query-devtools": "^5.77.0",
+    "@tanstack/react-virtual": "^3.13.12",
     "appwrite": "^18.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "12.12.2",
