--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.77.0",
     "@tanstack/react-query-devtools": "^5.77.0",
-    "@tanstack/react-virtual": "^3.13.12",
     "appwrite": "^18.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "12.12.2",
@@ -34,6 +33,7 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.4",
     "react-hotkeys-hook": "^5.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-rough-notation": "^1.0.5",
     "react-router": "^7.6.0",
     "swiper": "^11.2.8",
