feat(settings): add default media status and auto-sync preferences
- Introduced new user preferences for default media status with options: watching, willWatch, onHold, dropped, none, and completed.
- Added auto-sync preference to allow users to enable or disable automatic library synchronization.
- Updated relevant components to handle new preferences and ensure proper state management.
- Enhanced user experience by providing clear options for managing media status and synchronization settings.

--- a/appwrite.json
+++ b/appwrite.json
@@ -90,6 +90,29 @@
                     ],
                     "format": "enum",
                     "default": "enabled"
+                },
+                {
+                    "key": "defaultMediaStatus",
+                    "type": "string",
+                    "required": false,
+                    "array": false,
+                    "elements": [
+                        "watching",
+                        "willWatch",
+                        "onHold",
+                        "dropped",
+                        "none",
+                        "completed"
+                    ],
+                    "format": "enum",
+                    "default": "none"
+                },
+                {
+                    "key": "autoSync",
+                    "type": "boolean",
+                    "required": false,
+                    "array": false,
+                    "default": true
                 }
             ],
             "indexes": []
