feat(networks): enhance network filtering and media details handling
- Added a new "networks" field to the appwrite.json schema to support network filtering.
- Updated the NetworksFilter component to utilize a Slider for selecting networks, improving user interaction.
- Integrated network selection into the media details and library synchronization processes.
- Refactored NetworkCard to support both link and button types for better flexibility in UI components.
- Enhanced media details fetching to include network information, ensuring comprehensive data representation.

--- a/appwrite.json
+++ b/appwrite.json
@@ -370,6 +370,15 @@
                     "min": 0,
                     "max": 922337203685477600,
                     "default": null
+                },
+                {
+                    "key": "networks",
+                    "type": "integer",
+                    "required": false,
+                    "array": true,
+                    "min": 0,
+                    "max": 2147483647,
+                    "default": null
                 }
             ],
             "indexes": [
