--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hotkeys-hook": "^5.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-router": "^7.6.0",
+    "rxdb": "^16.16.0",
     "swiper": "^11.2.8",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.25.28",
