--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-router": "^7.6.0",
     "rxdb": "^16.16.0",
+    "rxjs": "^7.8.2",
     "swiper": "^11.2.8",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.25.28",
