--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "rxjs": "^7.8.2",
     "swiper": "^11.2.8",
     "tailwind-merge": "^2.6.0",
+    "use-long-press": "^3.3.0",
+    "vaul": "^1.1.2",
     "zod": "^3.25.28",
     "zustand": "^5.0.5"
   },
