feat: Implement Mood Selector and Recommendations List components
- Added MoodSelector component for user input on mood preferences.
- Integrated RecommendationsList component to display AI-generated recommendations based on user input.
- Created RecommendationCard component to showcase individual recommendations with detailed analysis.
- Enhanced user experience with loading states and error handling in RecommendationsList.
- Established state management for user preferences and selected description in MoodRecommendations page.

--- a/appwrite.json
+++ b/appwrite.json
@@ -603,6 +603,21 @@
       "entrypoint": "src/main.js",
       "commands": "npm install",
       "path": "functions/Cleanup Deleted Media"
+    },
+    {
+      "$id": "mood-recommendations",
+      "name": "Mood Recommendations",
+      "runtime": "node-22",
+      "execute": ["users"],
+      "events": [],
+      "scopes": [],
+      "schedule": "",
+      "timeout": 60,
+      "enabled": true,
+      "logging": true,
+      "entrypoint": "src/main.js",
+      "commands": "npm install",
+      "path": "functions/Mood Recommendations"
     }
   ]
 }
