--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "lint": "eslint .",
     "typecheck": "tsc --noEmit -p tsconfig.app.json",
     "verify": "pnpm lint && pnpm typecheck",
-    "format": "prettier --write \"**/*.{ts,tsx,json,md,css,html}\""
+    "format": "prettier --write \"**/*.{ts,tsx,json,md,css,html}\"",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
+    "tauri:dev:ios": "tauri ios dev",
+    "tauri:dev:android": "tauri android dev",
+    "tauri:build:ios": "tauri ios build",
+    "tauri:build:android": "tauri android build"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -21,6 +27,11 @@
     "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-dialog": "^2",
+    "@tauri-apps/plugin-notification": "^2",
+    "@tauri-apps/plugin-os": "^2",
+    "@tauri-apps/plugin-shell": "^2",
     "appwrite": "^19.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "12.12.2",
@@ -48,6 +59,7 @@
     "@eslint/js": "^9.27.0",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/vite": "^4.1.7",
+    "@tauri-apps/cli": "^2",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
