--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tauri-apps/plugin-dialog": "^2",
     "@tauri-apps/plugin-notification": "^2",
     "@tauri-apps/plugin-os": "^2",
+    "@tauri-apps/plugin-process": "^2.3.0",
     "@tauri-apps/plugin-shell": "^2",
     "appwrite": "^19.0.0",
     "clsx": "^2.1.1",
