feat: add system settings management with background running option
- Implemented SystemSettings struct with mutex for thread-safe access.
- Added commands to set and get the "keep running in background" setting.
- Integrated system settings into the React hook for managing app behavior.
- Added functionality to persist settings in local storage.
- Implemented autostart feature with synchronization to Rust backend.
- Enhanced user experience with toast notifications for settings updates.
- Added icons for iOS app in various resolutions.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,7 @@ jobs:
           releaseBody: 'See the assets below to download this version and install.'
           releaseDraft: true
           prerelease: false
+          includeUpdaterJson: true
           args: ${{ matrix.args }}
 
   publish-release:
