--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-autostart": "^2.5.0",
     "@tauri-apps/plugin-dialog": "^2",
     "@tauri-apps/plugin-notification": "^2",
     "@tauri-apps/plugin-opener": "^2.5.0",
     "@tauri-apps/plugin-os": "^2",
     "@tauri-apps/plugin-process": "^2.3.0",
     "@tauri-apps/plugin-shell": "^2",
+    "ajv": "^8.17.1",
     "appwrite": "^19.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "12.12.2",
