--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc --noEmit -p tsconfig.app.json",
     "verify": "pnpm lint && pnpm typecheck",
     "format": "prettier --write \"**/*.{ts,tsx,json,md,css,html}\"",
+    "release": "node scripts/release.cjs",
     "tauri:dev": "tauri dev",
     "tauri:build": "tauri build",
     "tauri:dev:ios": "tauri ios dev",
