--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "tauri:build:android": "tauri android build"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@formkit/auto-animate": "^0.8.2",
     "@heroui/react": "^2.8.1",
     "@hookform/resolvers": "^3.10.0",
